# webcam-head-tracker

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  WebcamHeadTrackerConfig.cmake.in  webcam-head-tracker-demo.cpp  webcam-head-tracker.cpp  webcam-head-tracker.hpp  webcam-snapshots.cpp
